crates/roughly/tests/snapshots/test_format__for_statement__auto_braces.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
for (item in sequence) {
  body
}

for (item in sequence) {
  body
}
