crates/roughly/tests/snapshots/test_format__for_statement__comment_but_no_block.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
for (item in sequence) # 1
{
  body
}
