crates/roughly/tests/snapshots/test_format__for_statement__comments_all_positions.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
for
# 1
( # (
  # 2
  item # item
  # 3
  in # in
  # 4
  sequence # sequence
  # 5
) # )
# 6
{
  body
}
