crates/roughly/tests/snapshots/test_format__for_statement__comments_multiline_sequence.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
for (
  item
  # 1
  in {
    sequence
  }
) {}

for (
  item
  in
  # 2
  {
    sequence
  }
) {}
