crates/roughly/tests/snapshots/test_format__for_statement__multiline_sequence.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
for (item in {
  sequence
}) {}

for (
  item in {
    sequence
  }
) {}
